.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glfaclass__c.object
<CustomObject>
    <description>glfaclass__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <description>externalid__c</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glfaclass_glcmp__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfaclass_adjacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glfaclass_adjacct__c</description>
        <label>Adjustment Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Fixed Asset Classes (Adjustment Account)</relationshipLabel>
        <relationshipName>glfaclassesadjaccts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfaclass_create_sfa__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Create Salesforce Asset?</description>
        <inlineHelpText>Create Salesforce Asset?</inlineHelpText>
        <label>Create Salesforce Asset?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfaclass_depacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glfaclass_depacct__c</description>
        <inlineHelpText>This GL Account stores the asset’s accumulated depreciation amount over the course of the useful life. GL Account with Account Type &apos;Asset&apos; should be used.</inlineHelpText>
        <label>Accumulated Depreciation Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Fixed Asset Classes (Depreciation Account)</relationshipLabel>
        <relationshipName>glfaclassesdepacct</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfaclass_dispacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glfaclass_dispacct__c</description>
        <inlineHelpText>The GL Account to be used to record the gain/loss on the asset when sold or retired. GL Account with Account Type &apos;Expense&apos; should be used.</inlineHelpText>
        <label>Disposition Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Fixed Asset Classes</relationshipLabel>
        <relationshipName>glfaclasses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfaclass_disposal_gl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>glfaclass_disposal_gl__c</description>
        <inlineHelpText>This account is used to record the Gain or Loss that occurs upon the disposal of a Fixed Asset.</inlineHelpText>
        <label>Gain or Loss on Disposal Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Fixed Asset Classes (Gain or Loss on Disposal Account)</relationshipLabel>
        <relationshipName>glfaclasses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfaclass_expacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glfaclass_expacct__c</description>
        <inlineHelpText>This GL Account used to record the depreciation expense after each depreciation cycle. GL Account with Account Type &apos;Expense&apos; should be used.</inlineHelpText>
        <label>Expense Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Fixed Asset Classes (Expense Account)</relationshipLabel>
        <relationshipName>glfaclassexpacct</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfaclass_faacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glfaclass_faacct__c</description>
        <inlineHelpText>The GL account that holds the acquisition expense of the fixed asset. GL account with type equal to ‘Asset’ should be used as a Fixed Asset Account. It has a lookup to GL Account</inlineHelpText>
        <label>Fixed Asset Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Fixed Asset Classes (Fixed Asset Account)</relationshipLabel>
        <relationshipName>glfaclassesfaacct</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfaclass_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glfaclass_glcmp__c</description>
        <inlineHelpText>Financial company associated with this fixed asset class. It has a lookup to GL Company.</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Fixed Asset Classes</relationshipLabel>
        <relationshipName>glfaclasses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfaclass_glfarule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glfaclass_glfarule__c</description>
        <inlineHelpText>Depreciation Rule Set which contains depreciation rules that are applied to calculate depreciation value for this fixed asset class. It has a lookup to GL Fixed Asset Rule.</inlineHelpText>
        <label>Depreciation Rule Set</label>
        <referenceTo>rstkf__glfarule__c</referenceTo>
        <relationshipLabel>Fixed Asset Classes</relationshipLabel>
        <relationshipName>glfaclasses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfaclass_lifemonths__c</fullName>
        <description>glfaclass_lifemonths__c</description>
        <inlineHelpText>This is the default value for assets assigned to this class. This is the number of months that the assets are expected to be of use.</inlineHelpText>
        <label>Life in Months</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfaclass_sf_accounts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>glfaclass_sf_accounts__c</description>
        <inlineHelpText>Account for Salesforce Assets.</inlineHelpText>
        <label>Account for Salesforce Assets</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fixed Asset Classes (Account for Salesforce Assets)</relationshipLabel>
        <relationshipName>Fixed_Asset_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfaclass_syusersched__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>glfaclass_syusersched__c</description>
        <inlineHelpText>Required when the depreciation method in the depreciation rule set is equal to ‘User Defined’. It has a lookup to User Schedule.</inlineHelpText>
        <label>User Defined Depreciation Schedule</label>
        <referenceTo>rstkf__syusersched__c</referenceTo>
        <relationshipLabel>Fixed Asset Classes</relationshipLabel>
        <relationshipName>glfaclass</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>triggeroptions__c</description>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Fixed Asset Class</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfaclass_glcmp__c</columns>
        <columns>rstkf__glfaclass_lifemonths__c</columns>
        <columns>rstkf__glfaclass_glfarule__c</columns>
        <columns>rstkf__glfaclass_faacct__c</columns>
        <columns>rstkf__glfaclass_adjacct__c</columns>
        <columns>rstkf__glfaclass_depacct__c</columns>
        <columns>rstkf__glfaclass_expacct__c</columns>
        <columns>rstkf__glfaclass_dispacct__c</columns>
        <columns>rstkf__glfaclass_syusersched__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fixed Asset Class</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fixed Asset Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>